Fix all text on mobile aligning centre

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,7 @@
     .container{
         text-align: center;
     }
+    body {text-align: left;}
 }
 
 header {
